[gd_scene load_steps=4 format=3 uid="uid://db1o74wxh7uq8"]

[ext_resource type="Theme" uid="uid://dqnddu2ud5iww" path="res://base_theme.tres" id="1_qtory"]
[ext_resource type="Script" path="res://screens/options_screen/options_screen.gd" id="2_dqfus"]
[ext_resource type="PackedScene" uid="uid://c2uwmkl4hbk4o" path="res://entities/background/background.tscn" id="2_tpbq3"]

[node name="OptionsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qtory")
script = ExtResource("2_dqfus")

[node name="Background" parent="." instance=ExtResource("2_tpbq3")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -6.5
offset_right = 6.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Options
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.1
value = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Effects"

[node name="EffectsSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.1
value = 1.0

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"
